--- a/src/app/componentes/curso-detalles/curso-detalles.component.html
+++ b/src/app/componentes/curso-detalles/curso-detalles.component.html
@@ -7,7 +7,7 @@
     <div class="tab-header card">
       <ul class="nav nav-tabs md-tabs tab-timeline" role="tablist" id="mytab">
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#personal" role="tab">Informacion General</a>
+          <a class="nav-link active" data-toggle="tab" href="#personal" role="tab">Información General</a>
           <div class="slide"></div>
         </li>
         <li class="nav-item">
@@ -128,7 +128,7 @@
                 <div class="card b-l-success business-info services">
                   <div class="card-header">
                     <div class="service-header">
-                        <h5 class="card-header-text">Descripcion</h5>
+                        <h5 class="card-header-text">Descripción</h5>
 
                     </div>
 
