--- a/src/app/componentes/curso-nuevo/curso-nuevo.component.html
+++ b/src/app/componentes/curso-nuevo/curso-nuevo.component.html
@@ -17,12 +17,12 @@
         <form [formGroup]="formGroup">
         <div class="row">
           <div class="col-sm-6">
-            <h4 class="sub-title">Informacion General</h4>
+            <h4 class="sub-title">Información General</h4>
 
 
 
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.nombre.errors }">
-              <span class="input-group-addon"><i class="icofont icofont-user"></i></span>
+              <span class="input-group-addon"><i class="icofont icofont-learn"></i></span>
               <input  class="form-control" formControlName="nombre" type="text" placeholder="Nombre del Curso" />
             </div>
             <div  *ngIf="submitted && f.nombre.errors" >
@@ -33,7 +33,7 @@
 
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.correo_contaco.errors }">
               <span class="input-group-addon"><i class="icofont icofont-email"></i></span>
-              <input type="text" formControlName="correo_contaco" class="form-control" placeholder="Correo Electronico"  />
+              <input type="text" formControlName="correo_contaco" class="form-control" placeholder="Correo de contacto"  />
             </div>
             <div  *ngIf="submitted && f.correo_contaco.errors" >
               <div class="text-danger" *ngIf="f.correo_contaco.errors.required">Email es obligatorio</div>
@@ -43,21 +43,24 @@
             <br>
 
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.area_conocimiento.errors }">
-              <span class="input-group-addon"><i class="icofont icofont-user"></i></span>
-              <input  class="form-control" formControlName="area_conocimiento" type="text" placeholder="Area de Conocimiento" />
+              <span class="input-group-addon"><i class="icofont icofont-light-bulb"></i></span>
+              <input  class="form-control" formControlName="area_conocimiento" type="text" placeholder="Area de Conocimiento o Departamento" />
             </div>
             <div  *ngIf="submitted && f.area_conocimiento.errors" >
-              <div class="text-danger" *ngIf="f.area_conocimiento.errors.required">Area del Conocimiento es obligatorio</div>
+              <div class="text-danger" *ngIf="f.area_conocimiento.errors.required">Area del Conocimiento o Departamentoes obligatorio</div>
             </div>
 
      <br>
 
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.anno_academico.errors }">
-              <span class="input-group-addon"><i class="icofont icofont-user"></i></span>
-              <input  class="form-control" formControlName="anno_academico" type="text" placeholder="Año Academico" />
+              <span class="input-group-addon"><i class="icofont icofont-clock-time"></i></span>
+              <select formControlName="anno_academico" class="form-control">
+                <option value="">Selecciones Año académico o Destinatarios</option>
+                <option value="Postgrado">Postgrado</option>
+              </select>
             </div>
             <div  *ngIf="submitted && f.anno_academico.errors" >
-              <div class="text-danger" *ngIf="f.anno_academico.errors.required">Año academico es obligatorio</div>
+              <div class="text-danger" *ngIf="f.anno_academico.errors.required">Año académico o Destinatarios es obligatorio</div>
             </div>
 
   <br>
@@ -72,9 +75,14 @@
 
             <br>
 
-            <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.tipo_curso.errors }">
-              <span class="input-group-addon"><i class="icofont icofont-user"></i></span>
-              <input  class="form-control" formControlName="tipo_curso" type="text" placeholder="Tipo de Curso" />
+              <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.tipo_curso.errors }">
+              <span class="input-group-addon"><i class="icofont icofont-license"></i></span>
+              <select formControlName="tipo_curso" class="form-control">
+                <option value="">Selecciones Tipo Curso</option>
+                <option value="De apoyo">De apoyo</option>
+                <option value="Semipresencial">Semipresencial</option>
+                <option value="A distancia">A distancia</option>
+              </select>
             </div>
             <div  *ngIf="submitted && f.tipo_curso.errors" >
               <div class="text-danger" *ngIf="f.tipo_curso.errors.required">Tipo de curso es obligatorio</div>
@@ -83,7 +91,7 @@
  <br>
 
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.otro_profesor.errors }">
-              <span class="input-group-addon"><i class="icofont icofont-user"></i></span>
+              <span class="input-group-addon"><i class="icofont icofont-group"></i></span>
               <input  class="form-control" formControlName="otro_profesor" type="text" placeholder="Otro Profesor" />
             </div>
             <div  *ngIf="submitted && f.otro_profesor.errors" >
@@ -96,10 +104,10 @@
 
           </div>
           <div class="col-sm-6 mobile-inputs">
-            <h4 class="sub-title">Descripcion</h4>
-            <textarea [ngClass]="{ 'form-control-danger': submitted && f.otro_profesor.errors }" rows="19" cols="10" formControlName="descripcion" class="form-control" placeholder="Descripcion del Curso"></textarea>
+            <h4 class="sub-title">Descripción</h4>
+            <textarea [ngClass]="{ 'form-control-danger': submitted && f.descripcion.errors }" rows="19" cols="10" formControlName="descripcion" class="form-control" placeholder="Descripción del Curso"></textarea>
             <div  *ngIf="submitted && f.descripcion.errors" >
-              <div class="text-danger" *ngIf="f.descripcion.errors.required">La descripcion es obligatoria</div>
+              <div class="text-danger" *ngIf="f.descripcion.errors.required">La descripción es obligatoria</div>
             </div>
 
 
@@ -108,7 +116,7 @@
         </div>
 
         <div class="text-right m-t-20">
-          <a [routerLink]="['../administrar']"  class="btn btn-danger m-r-20 waves-effect">Cancelar</a>
+          <a [routerLink]="['../']"  class="btn btn-danger m-r-20 waves-effect">Cancelar</a>
           <button type="button" (click)="register()" [disabled]="formGroup.invalid && submitted" class="btn btn-success waves-effect waves-light ">Adicionar</button>
 
 
