--- a/src/app/componentes/usuario-editar/usuario-editar.component.html
+++ b/src/app/componentes/usuario-editar/usuario-editar.component.html
@@ -43,6 +43,7 @@
                                 <select formControlName="role" class="form-control">
                                   <option value="">Selecciones el Rol</option>
                                   <option value="ROLE_OBSERVADOR">Rol Observador</option>
+                                  <option value="ROLE_EVALUADOR">Rol Evaluador</option>
                                   <option value="ROLE_ADMIN">Rol Administrador</option>
                                 </select>
                               </div>
