--- a/src/app/componentes/usuario-detalles/usuario-detalles.component.html
+++ b/src/app/componentes/usuario-detalles/usuario-detalles.component.html
@@ -15,7 +15,10 @@
               <div class="col-lg-12">
                 <div class="user-title">
                   <h2>{{usuario.nombre}}</h2>
-                  <span class="text-white">{{usuario.role==='ROLE_ADMIN' ? 'Administrador del Sistema' : 'Observador'}}</span>
+                  <span class="text-white">
+                    {{usuario.role==='ROLE_ADMIN' ? 'Administrador' : ''}}
+                    {{usuario.role==='ROLE_OBSERVADOR' ? 'Observador' : ''}}
+                    {{usuario.role==='ROLE_EVALUADOR' ? 'Evaluador' : ''}}</span>
                 </div>
               </div>
               <div>
@@ -38,7 +41,7 @@
     <div class="tab-header card">
       <ul class="nav nav-tabs md-tabs tab-timeline" role="tablist" id="mytab">
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#personal" role="tab">Informacion Pesonal</a>
+          <a class="nav-link active" data-toggle="tab" href="#personal" role="tab">Información Personal</a>
           <div class="slide"></div>
         </li>
         <li class="nav-item">
@@ -57,7 +60,7 @@
         <!-- personal card start -->
         <div class="card">
           <div class="card-header">
-            <h5 class="card-header-text">Informacion</h5>
+            <h5 class="card-header-text">Información</h5>
           </div>
           <div class="card-block">
             <div class="view-info">
@@ -75,7 +78,11 @@
                             </tr>
                             <tr>
                               <th scope="row">Rol en el Sistema</th>
-                              <td>{{usuario.role==='ROLE_ADMIN' ? 'Administrador' : 'Observador'}}</td>
+                              <td >
+                                {{usuario.role==='ROLE_ADMIN' ? 'Administrador' : ''}}
+                                {{usuario.role==='ROLE_OBSERVADOR' ? 'Observador' : ''}}
+                                {{usuario.role==='ROLE_EVALUADOR' ? 'Evaluador' : ''}}
+                              </td>
                             </tr>
                             <tr>
                               <th scope="row">Estado</th>
