--- a/src/app/componentes/curso-admin/curso-admin.component.html
+++ b/src/app/componentes/curso-admin/curso-admin.component.html
@@ -38,7 +38,11 @@
                   </div>
                 </td>
                 <td>{{curso.profesor_principal}}</td>
-                <td>{{curso.tipo_curso}}</td>
+                <td>
+                  {{curso.tipo_curso==='de-apoyo' ? 'De apoyo' : ''}}
+                  {{curso.tipo_curso==='semipresencial' ? 'Semipresencial' : ''}}
+                  {{curso.tipo_curso==='a-distancia' ? 'A distancia' : ''}}
+                </td>
                 <td><time>{{curso.updatedAt | amTimeAgo:false}}</time></td>
 
                 <td>
