correciones menores en cuanto a optimizacion de codigo 2

--- a/src/app/componentes/aplicacion-inicio/aplicacion-inicio.component.html
+++ b/src/app/componentes/aplicacion-inicio/aplicacion-inicio.component.html
@@ -64,7 +64,7 @@
             <li class="user-profile header-notification">
               <div class="dropdown-primary dropdown">
                 <div class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="./assets/assets/images/d.jfif" class="img-radius" alt="User-Profile-Image">
+                  <img src="./assets/assets/images/avatar-1.jpg" class="img-radius" alt="User-Profile-Image">
                   <span>{{identity.nombre}}</span>
                   <i class="feather icon-chevron-down"></i>
                 </div>
