cambios de ultima hora

--- a/src/app/componentes/curso-detalles/curso-detalles.component.html
+++ b/src/app/componentes/curso-detalles/curso-detalles.component.html
@@ -89,7 +89,7 @@
                             </tr>
                             <tr>
                               <th scope="row">Año Academico</th>
-                              <td>{{curso.anno_academico==='posgrado' ? 'Posgrado' : ''}}</td>
+                              <td>{{curso.anno_academico==='postgrado' ? 'Postgrado' : ''}}</td>
                             </tr>
                             <tr>
                               <th scope="row">Ultima Actualización</th>
