--- a/src/app/componentes/curso-nuevo/curso-nuevo.component.html
+++ b/src/app/componentes/curso-nuevo/curso-nuevo.component.html
@@ -55,7 +55,7 @@
               <span class="input-group-addon"><i class="icofont icofont-clock-time"></i></span>
               <select formControlName="anno_academico" class="form-control">
                 <option value="">Selecciones Año académico o Destinatarios</option>
-                <option value="posgrado">Posgrado</option>
+                <option value="postgrado">Postgrado</option>
               </select>
             </div>
             <div  *ngIf="submitted && f.anno_academico.errors" >
