--- a/src/app/componentes/usuario-detalles/usuario-detalles.component.html
+++ b/src/app/componentes/usuario-detalles/usuario-detalles.component.html
@@ -8,7 +8,7 @@
           <div class="col-md-12">
             <div class="media-left">
               <a href="#" class="profile-image">
-                <img class="user-img img-radius" src=".\assets\assets\images\user-profile\user-yamir.jpg" alt="user-img">
+                <img class="user-img img-radius" src=".\assets\assets\images\user-profile\user-default.jpg" alt="user-img">
               </a>
             </div>
             <div class="media-body row">
