--- a/src/app/componentes/seguridad-login/seguridad-login.component.html
+++ b/src/app/componentes/seguridad-login/seguridad-login.component.html
@@ -63,8 +63,8 @@
               <hr>
               <div class="row">
                 <div class="col-md-10">
-                  <p class="text-inverse text-left m-b-0">Sistema de Evalucion de Cursos de Posgrado.</p>
-                  <p class="text-inverse text-left"><a routerLink=""  ><b class="f-w-600">Centro de Educacion a Distancia</b></a></p>
+                  <p class="text-inverse text-left m-b-0">Sistema de Evalucion de Cursos de Postgrado.</p>
+                  <p class="text-inverse text-left"><a routerLink=""  ><b class="f-w-600">Centro Nacional de Educacion a Distancia</b></a></p>
                 </div>
                 <div class="col-md-2">
                   <img src="./assets/assets/images/auth/Logo-small-bottom.png" alt="small-logo.png">
