corregido errores ortograficos en el login

--- a/src/app/componentes/seguridad-login/seguridad-login.component.html
+++ b/src/app/componentes/seguridad-login/seguridad-login.component.html
@@ -44,7 +44,7 @@
                     </label>
                   </div>
                   <div class="forgot-phone text-right f-right">
-                    <a routerLink="../reset-contrasenna" class="text-right f-w-600">Olvido su Contraseña</a>
+                    <a routerLink="../reset-contrasenna" class="text-right f-w-600">Olvidó su Contraseña</a>
                   </div>
                 </div>
               </div>
@@ -63,7 +63,7 @@
               <hr>
               <div class="row">
                 <div class="col-md-10">
-                  <p class="text-inverse text-left m-b-0">Sistema de Evalucion de Cursos de Postgrado.</p>
+                  <p class="text-inverse text-left m-b-0">Sistema de Evalución de Cursos de Postgrado.</p>
                   <p class="text-inverse text-left"><a routerLink=""  ><b class="f-w-600">Centro Nacional de Educacion a Distancia</b></a></p>
                 </div>
                 <div class="col-md-2">
