--- a/src/app/componentes/seguridad-reset-password/seguridad-reset-password.component.html
+++ b/src/app/componentes/seguridad-reset-password/seguridad-reset-password.component.html
@@ -24,8 +24,8 @@
               <div class="form-group">
                 <input formControlName="email" class="form-control " [ngClass]="{ 'form-control-danger': submitted && f.email.errors }" placeholder="Correo Electrónico" >
                 <div  *ngIf="submitted && f.email.errors" >
-                  <div class="text-danger col-form-label" *ngIf="f.email.errors.required">Email es obligatorio</div>
-                  <div class="text-danger col-form-label" *ngIf="f.email.errors.email">No es una direccion de Email valida</div>
+                  <div class="text-danger col-form-label" *ngIf="f.email.errors.required">El correo electrónico es obligatorio</div>
+                  <div class="text-danger col-form-label" *ngIf="f.email.errors.email">No es un correo electrónico valido</div>
                 </div>
 
               </div>
@@ -33,15 +33,15 @@
 
               <div class="row">
                 <div class="col-md-12">
-                  <button (click)="reset()" [disabled]="formGroup.invalid && submitted" type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Resetear</button>
+                  <button (click)="reset()" [disabled]="formGroup.invalid && submitted" type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Recuperar</button>
                 </div>
               </div>
               <p class="f-w-600 text-right">Regresar a <a routerLink="../inicio-seccion">Inicio de Sección.</a></p>
               <hr>
               <div class="row">
                 <div class="col-md-10">
-                  <p class="text-inverse text-left m-b-0">Sistema de Evalucion de Cursos de Posgrado.</p>
-                  <p class="text-inverse text-left"><a routerLink=""  ><b class="f-w-600">Centro de Educacion a Distancia</b></a></p>
+                  <p class="text-inverse text-left m-b-0">Sistema de Evalución de Cursos de Postgrado.</p>
+                  <p class="text-inverse text-left"><a><b class="f-w-600">Centro Nacional de Educación a Distancia</b></a></p>
                 </div>
                 <div class="col-md-2">
                   <img src="./assets/assets/images/auth/Logo-small-bottom.png" alt="small-logo.png">
