correciones menores de ortogracia, faltan unas cuantas.

--- a/src/app/componentes/curso-nuevo/curso-nuevo.component.html
+++ b/src/app/componentes/curso-nuevo/curso-nuevo.component.html
@@ -54,7 +54,7 @@
             <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.anno_academico.errors }">
               <span class="input-group-addon"><i class="icofont icofont-clock-time"></i></span>
               <select formControlName="anno_academico" class="form-control">
-                <option value="">Selecciones Año académico o Destinatarios</option>
+                <option value="">Seleccione año académico o destinatarios</option>
                 <option value="postgrado">Postgrado</option>
               </select>
             </div>
@@ -77,7 +77,7 @@
               <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.tipo_curso.errors }">
               <span class="input-group-addon"><i class="icofont icofont-license"></i></span>
               <select formControlName="tipo_curso" class="form-control">
-                <option value="">Selecciones Tipo Curso</option>
+                <option value="">Seleccione Tipo Curso</option>
                 <option value="de-apoyo">De apoyo</option>
                 <option value="semipresencial">Semipresencial</option>
                 <option value="a-distancia">A distancia</option>
