--- a/src/app/componentes/usuario-admin/usuario-admin.component.html
+++ b/src/app/componentes/usuario-admin/usuario-admin.component.html
@@ -140,7 +140,7 @@
                       <div class="input-group" [ngClass]="{ 'input-group-danger': submitted && f.role.errors }">
                         <span class="input-group-addon"><i class="icofont icofont-license"></i></span>
                         <select formControlName="role" class="form-control">
-                          <option value="">Selecciones el Rol</option>
+                          <option value="">Seleccione el Rol</option>
                           <option value="ROLE_OBSERVADOR">Rol Observador</option>
                           <option value="ROLE_EVALUADOR">Rol Evaluador</option>
                           <option value="ROLE_ADMIN">Rol Administrador</option>
