--- a/src/app/componentes/usuario-inicio/usuario-inicio.component.html
+++ b/src/app/componentes/usuario-inicio/usuario-inicio.component.html
@@ -14,7 +14,7 @@
           <li class="breadcrumb-item">
             <a routerLink=""> <i class="feather icon-home"></i> </a>
           </li>
-          <li class="breadcrumb-item"><a >Configuracion</a>
+          <li class="breadcrumb-item"><a >Configuración</a>
           </li>
           <li class="breadcrumb-item"><a >Usuario</a>
           </li>
