agregada la vista de evaluar, ademas de form dinamicos reactivos. solo un ejemplo funcional pero sin adaptacion al caso de estudio.

--- a/src/app/componentes/aplicacion-inicio/aplicacion-inicio.component.html
+++ b/src/app/componentes/aplicacion-inicio/aplicacion-inicio.component.html
@@ -39,23 +39,23 @@
               <div class="dropdown-primary dropdown">
                 <div class="dropdown-toggle" data-toggle="dropdown">
                   <i class="feather icon-bell"></i>
-                  <!--<span class="badge bg-c-pink">0</span>-->
+                  <span class="badge bg-c-pink">1</span>
                 </div>
                 <ul class="show-notification notification-view dropdown-menu" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
                   <li>
                     <h6>Notificaciones</h6>
                     <label class="label label-danger">Nuevas</label>
                   </li>
-                  <!--<li>
+                 <li>
                     <div class="media">
-                      <img class="d-flex align-self-center img-radius" src="./assets/assets/images/avatar-4.jpg"  alt="Generic placeholder image">
+                      <img class="d-flex align-self-center img-radius" src="./assets/assets/images/avatar-1.jpg"  alt="Generic placeholder image">
                       <div class="media-body">
-                        <h5 class="notification-user">John Doe</h5>
-                        <p class="notification-msg">Lorem ipsum dolor sit amet, consectetuer elit.</p>
-                        <span class="notification-time">30 minutes ago</span>
+                        <h5 class="notification-user">{{identity.nombre}}</h5>
+                        <p class="notification-msg">Inicio de Sección correctamente</p>
+                        <span class="notification-time">{{lastUpdated | amTimeAgo:false}}</span>
                       </div>
                     </div>
-                  </li>-->
+                  </li>
 
                 </ul>
               </div>
