--- a/src/app/componentes/curso-detalles/curso-detalles.component.html
+++ b/src/app/componentes/curso-detalles/curso-detalles.component.html
@@ -84,7 +84,7 @@
                               <td>{{curso.correo_contaco}}</td>
                             </tr>
                             <tr>
-                              <th scope="row">Area del Conocimiento</th>
+                              <th scope="row">Área del Conocimiento</th>
                               <td>{{curso.area_conocimiento}}</td>
                             </tr>
                             <tr>
