add component parts

--- a/src/app/module-curriculo/components/curriculo-targeta/curriculo-targeta.component.html
+++ b/src/app/module-curriculo/components/curriculo-targeta/curriculo-targeta.component.html
@@ -1,54 +1,19 @@
+<div class="container">
 
-<mat-card class="example-card"> 
+    <div class="lateral">
+                <app-lateral></app-lateral>
+    </div>
+
+    <div class="centro">
         
-    <mat-card-header>
-        <mat-card-title>Curriculo Profecional </mat-card-title>            
+        <div class="c-superior">
+          <app-centro-superior></app-centro-superior>
+        </div>
 
-    </mat-card-header>
+        <div class="c-inferior">
+            <app-centro-inferior></app-centro-inferior>
+          </div>
 
-    <mat-card-title-group>
-        <img  mat-card-image src="../../../../assets/img/image2.jpg" >
-    </mat-card-title-group>
+    </div>
 
-    <mat-card-content>
-        <h4> Perfil:  </h4>
-        <p>
-            <strong> {{ curriculo.nombre }} </strong>
-
-        </p>
-        <h4> Educación:  </h4>
-            <P>
-                <strong> {{curriculo.educacion}} </strong>  <!-- {{curriculo.ActResumen}}-->
-            </P>
-        <h4> Experiencia Laboral:  </h4>
-        <P>
-            <strong> {{curriculo.experiencialaboral}}</strong>  <!-- {{curriculo.ActResumen}}-->
-        </P>
-        <!-- <div class="example-container"
-            fxFlex  > -->
-            
-            
-           <h4> Contacto:  </h4>
-           <strong> Telefono: {{curriculo.telefono  }} </strong> 
-           <br>
-           <strong> Correo: </strong> {{curriculo.correo }}
-
-       <!-- </div> -->
-        
-
-    </mat-card-content>
-
-    <mat-card-actions>
-        <button mat-button 
-                color="warn"
-                routerLink = "/curriculo/curriculo"> 
-            Leer más...
-        </button>
-        <button mat-button color="info"
-                [routerLink] = "['/curriculo/editar', curriculo.id ]"> 
-            Editar
-        </button>
-    </mat-card-actions>
-
-
-</mat-card>
+</div>
